# open-lakehouse-lab

./: .yamllint.yml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.codex/: README.md
.github/: pull_request_template.md
.github/workflows/: ci-pr.yml  conventions.yml  security.yml
airflow/: requirements.txt
airflow/.astro/: config.yaml
airflow/dags/: hello_kubernetes_pod.py  lab_kubernetes_pod_operator.py  lab_params_and_retries.py  open_lakehouse_lab_daily.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: attach_polaris.sql  publish_raw_fixture.sql
dbt/seeds/: raw_source_events.csv
docker/: dbt-duckdb-polaris.Dockerfile
docs/: conventions-check-v2.md  conventions-check.md  learning-path.md  project-plan.md  user-customization-guide.md
docs/lessons/: 01-local-kubernetes-kind.md  02-minio-raw-storage.md  03-polaris-iceberg-catalog.md  04-dbt-duckdb-transformations.md  05-airflow-kubernetes-pods.md  06-end-to-end-pipeline.md
docs/runbooks/: airflow-dbt-orchestration.md  airflow-kubernetes-pod-operator.md  dbt-duckdb-polaris.md  dbt-minio-polaris-backbone.md  dbt-raw-staging.md  local-kind-cluster.md  minio-object-storage.md  polaris-rest-catalog.md  silver-layer.md
docs/site/: index.html
docs/troubleshooting/: guided-troubleshooting.md
k8s/airflow/: dbt-workload-pvc.yaml  pod-launcher-rbac.yaml  values.yaml
k8s/dbt/: publish-raw-fixture-job.yaml
k8s/kind/: kind-config.yaml
k8s/minio/: deployment.yaml  job-create-bucket.yaml  secret.yaml  service.yaml
scripts/: check_requirements_sync.py  lab_step.py
(+28 files in other folders)
