[project]
name = "open-lakehouse-lab"
version = "0.1.0"
description = "Open Lakehouse Lab is a 100% open source study project for modern data lakehouse engineering."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7,<5",
  "ruff>=0.6,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "yamllint>=1.35,<2",
  "sqlfluff>=3,<4",
  "sqlfluff-templater-dbt>=3,<4",
  "dbt-core>=1.8,<2",
  "dbt-duckdb>=1.8,<2",
  "duckdb>=1.1,<2",
  "bandit>=1.7,<2",
]


[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "airflow/.astro",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
